[package]
name = "abos"
version = "0.1.0"
authors = ["jmw992 <jmw992@gmail.com> Julian0024 <julian0024@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.18"
approx = "0.3.2"
rand = "0.7.3"
kdtree = "0.6.0"
csv = "1.1.3"
serde = { version = "1.0", features = ["derive"] }
